--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fbangel",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/julio-benavente/fbangel",
+  "homepage": "https://julio-benavente.github.io/fbangel/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
