--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "framer-motion": "^4.1.3",
     "polished": "^4.1.1",
     "react": "^17.0.2",
+    "react-country-region-selector": "^3.0.2",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.2.1",
+    "react-phone-input-2": "^2.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
