--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.2.1",
+    "react-modal-image": "^2.5.0",
     "react-phone-input-2": "^2.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
