--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "framer-motion": "^4.1.3",
+    "i18next": "^20.2.2",
+    "i18next-browser-languagedetector": "^6.1.0",
+    "i18next-http-backend": "^1.2.2",
     "polished": "^4.1.1",
     "react": "^17.0.2",
     "react-country-region-selector": "^3.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.2.1",
+    "react-i18next": "^11.8.15",
     "react-modal-image": "^2.5.0",
     "react-phone-input-2": "^2.14.0",
     "react-router-dom": "^5.2.0",
@@ -50,6 +54,5 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
