--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-country-region-selector": "^3.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.2.1",
     "react-i18next": "^11.8.15",
     "react-modal-image": "^2.5.0",
